--- a/.project
+++ b/.project
@@ -23,4 +23,41 @@
 		<nature>org.eclipse.cdt.managedbuilder.core.managedBuildNature</nature>
 		<nature>org.eclipse.cdt.managedbuilder.core.ScannerConfigNature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>doc/SDK/rtos/osif/doxygen/osif.dox</name>
+			<type>1</type>
+			<locationURI>s32sdk_s32k1xx_rtm_403/rtos/osif/doxygen/osif.dox</locationURI>
+		</link>
+		<link>
+			<name>doc/SDK/platform/drivers/src/adc/doxygen/adc_driver.dox</name>
+			<type>1</type>
+			<locationURI>s32sdk_s32k1xx_rtm_403/platform/drivers/src/adc/doxygen/adc_driver.dox</locationURI>
+		</link>
+		<link>
+			<name>doc/SDK/platform/drivers/src/clock/doxygen/clock_manager.dox</name>
+			<type>1</type>
+			<locationURI>s32sdk_s32k1xx_rtm_403/platform/drivers/src/clock/doxygen/clock_manager.dox</locationURI>
+		</link>
+		<link>
+			<name>doc/SDK/platform/drivers/src/edma/doxygen/edma_driver.dox</name>
+			<type>1</type>
+			<locationURI>s32sdk_s32k1xx_rtm_403/platform/drivers/src/edma/doxygen/edma_driver.dox</locationURI>
+		</link>
+		<link>
+			<name>doc/SDK/platform/drivers/src/interrupt/doxygen/interrupt.dox</name>
+			<type>1</type>
+			<locationURI>s32sdk_s32k1xx_rtm_403/platform/drivers/src/interrupt/doxygen/interrupt.dox</locationURI>
+		</link>
+		<link>
+			<name>doc/SDK/platform/drivers/src/pins/doxygen/pins.dox</name>
+			<type>1</type>
+			<locationURI>s32sdk_s32k1xx_rtm_403/platform/drivers/src/pins/doxygen/pins.dox</locationURI>
+		</link>
+		<link>
+			<name>doc/SDK/platform/drivers/src/clock/S32K1xx/doxygen/clock_S32K1xx.dox</name>
+			<type>1</type>
+			<locationURI>s32sdk_s32k1xx_rtm_403/platform/drivers/src/clock/S32K1xx/doxygen/clock_S32K1xx.dox</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
