--- a/.settings/com.freescale.s32ds.cross.sdk.support.prefs
+++ b/.settings/com.freescale.s32ds.cross.sdk.support.prefs
@@ -1,2 +1,3 @@
+FILTER_SDKs_SHOW_LATEST_VERSIONS=false
 com.freescale.s32ds.cross.sdk.support.attachedSDKs=S32K144_SDK_4.0.3_PATH|Debug_FLASH|Release_FLASH|Debug_RAM|Release_RAM
 eclipse.preferences.version=1
